# boring-stuff

./: .gitignore  README.md  first.bat  pyproject.toml  setup.ps1
cases/webs/: mp4to3.py  youtube.py
scripts/: README.md  anki.bat  hello.bat  hello.py  lucky.bat  mapit.bat  mp4to3.bat  negative.bat  openwebs.bat  pinterest.bat  youtube.bat
scripts/webs/: youtube.py
